2004-06-17  Wim Taymans  <wim@fluendo.com>

	* ext/alsa/gstalsa.c: (gst_alsa_init), (gst_alsa_dispose),
	(gst_alsa_get_time), (gst_alsa_xrun_recovery):
	* ext/alsa/gstalsa.h:
	* ext/alsa/gstalsaclock.c: (gst_alsa_clock_get_type):
	* ext/alsa/gstalsasrc.c: (gst_alsa_src_init), (gst_alsa_src_loop),
	(gst_alsa_src_change_state):
	* ext/alsa/gstalsasrc.h:
	Make the xrun code timestamp and offset the buffers correctly.
	moved the clock to the base class, use alsa methods to get time.
	Do correct timestamping on outgoing buffers.

2004-06-17  Wim Taymans  <wim@fluendo.com>

	* gst/audiorate/Makefile.am:
	* gst/audiorate/gstaudiorate.c: (gst_audiorate_get_type),
	(gst_audiorate_base_init), (gst_audiorate_class_init),
	(gst_audiorate_link), (gst_audiorate_init), (gst_audiorate_chain),
	(gst_audiorate_set_property), (gst_audiorate_get_property),
	(gst_audiorate_change_state), (plugin_init):
	Added an audiorate converter that fills in gaps.

2004-06-17  Johan Dahlin  <johan@gnome.org>

	* ext/tcp/*: Revert Zaheer changes.

2004-06-16  Wim Taymans  <wim@fluendo.com>

	* sys/v4l/gstv4lmjpegsrc.c: (gst_v4lmjpegsrc_get):
	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_sync_mode_get_type),
	(gst_v4lsrc_class_init), (gst_v4lsrc_init), (gst_v4lsrc_get_fps),
	(gst_v4lsrc_get), (gst_v4lsrc_set_property),
	(gst_v4lsrc_get_property):
	* sys/v4l/gstv4lsrc.h:
	Added a copy mode to v4lsrc where it will output a copied version
	of its internal hardware buffer.
	Fix the wrong FLAG_SET usage. The flags are integers, not bits, you
	can't | them.

2004-06-16  Wim Taymans  <wim@fluendo.com>

	* sys/oss/gstosssrc.c: (gst_osssrc_get):
	Timestamp fixes.

2004-06-16  Wim Taymans  <wim@fluendo.com>

	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_sync_mode_get_type),
	(gst_v4lsrc_class_init), (gst_v4lsrc_init), (gst_v4lsrc_get_fps),
	(gst_v4lsrc_get), (gst_v4lsrc_set_property),
	(gst_v4lsrc_get_property):
	* sys/v4l/gstv4lsrc.h:
	* sys/v4l/v4l-overlay_calls.c: (gst_v4l_set_overlay):